[gd_scene load_steps=22 format=3 uid="uid://b0vs5cplaalr0"]

[ext_resource type="PackedScene" uid="uid://crmqy2drqxyqr" path="res://Scenes/World/BGWorld.tscn" id="2_0dbi4"]
[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="2_oqhdw"]
[ext_resource type="Texture2D" uid="uid://c6n4qjsjjmknw" path="res://Assets/Originals/Sprites/Logo.png" id="2_u6p4w"]
[ext_resource type="PackedScene" uid="uid://t2dui8ppm3a4" path="res://Scenes/Credits/Credits.tscn" id="5_auq65"]
[ext_resource type="PackedScene" uid="uid://doj1dmgtf0a71" path="res://Scenes/UI/SoundButton/SoundButton.tscn" id="6_0nx1m"]

[sub_resource type="Animation" id="5"]
resource_name = "CloseSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MainContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LogoRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="1"]
resource_name = "Intro"
length = 2.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"intro_done"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MainContainer/TitlesContainer/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MainContainer/TitlesContainer/SubTitle:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="6"]
resource_name = "MainMenuOpen"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MainContainer/TitlesContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MainContainer/TitlesContainer/SubTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="4"]
resource_name = "OpenSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MainContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LogoRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="3"]
resource_name = "Outro"
length = 0.5

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/MainContainer/TitlesContainer/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MainContainer/TitlesContainer/SubTitle:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/MainContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LogoRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2kqig"]
_data = {
"CloseSubMenu": SubResource("5"),
"Intro": SubResource("1"),
"MainMenuOpen": SubResource("6"),
"OpenSubMenu": SubResource("4"),
"Outro": SubResource("3"),
"RESET": SubResource("2")
}

[sub_resource type="AnimationNodeAnimation" id="12"]
animation = &"CloseSubMenu"

[sub_resource type="AnimationNodeAnimation" id="7"]
animation = &"Intro"

[sub_resource type="AnimationNodeAnimation" id="10"]
animation = &"MainMenuOpen"

[sub_resource type="AnimationNodeAnimation" id="13"]
animation = &"OpenSubMenu"

[sub_resource type="AnimationNodeStateMachineTransition" id="11"]
advance_condition = &"intro_done"

[sub_resource type="AnimationNodeStateMachineTransition" id="14"]

[sub_resource type="AnimationNodeStateMachineTransition" id="15"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="16"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="8"]
states/CloseSubMenu/node = SubResource("12")
states/CloseSubMenu/position = Vector2(700, 232)
states/Intro/node = SubResource("7")
states/Intro/position = Vector2(230, 123)
states/MainMenuOpen/node = SubResource("10")
states/MainMenuOpen/position = Vector2(461, 123)
states/OpenSubMenu/node = SubResource("13")
states/OpenSubMenu/position = Vector2(700, 123)
transitions = ["Intro", "MainMenuOpen", SubResource("11"), "MainMenuOpen", "OpenSubMenu", SubResource("14"), "OpenSubMenu", "CloseSubMenu", SubResource("15"), "CloseSubMenu", "MainMenuOpen", SubResource("16")]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_oqhdw")
game_scene = "res://Scenes/MainGameUI/MainGameUI.tscn"
version_name = "1.0.0"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="BGWorld" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_0dbi4")]

[node name="LogoRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_u6p4w")

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2kqig")
}

[node name="MenuAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("8")
anim_player = NodePath("../MenuAnimationPlayer")
active = true
parameters/conditions/intro_done = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TitlesContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="MarginContainer/MainContainer/TitlesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Harvest Hill"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="MarginContainer/MainContainer/TitlesContainer"]
layout_mode = 2
text = "Godot Wild Jam #62 Edition"
horizontal_alignment = 1

[node name="OptionsMargins" type="MarginContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 188

[node name="Control" type="Control" parent="MarginContainer/MainContainer/OptionsMargins"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/OptionsMargins/Control"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -20.0
offset_right = 64.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="PlayButton" parent="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer" instance=ExtResource("6_0nx1m")]
layout_mode = 2
text = "Play"

[node name="CreditsButton" parent="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer" instance=ExtResource("6_0nx1m")]
layout_mode = 2
text = "Credits"

[node name="QuitButton" parent="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer" instance=ExtResource("6_0nx1m")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit
"

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="Titles" type="Control" parent="TitleContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VersionNameLabel" type="Label" parent="TitleContainer/Titles"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -14.0
horizontal_alignment = 1

[node name="CreditsContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="Credits" parent="CreditsContainer" instance=ExtResource("5_auq65")]
visible = false
layout_mode = 2
scroll_active = false

[node name="FlowControlContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="FlowControl" type="Control" parent="FlowControlContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BackButton" parent="FlowControlContainer/FlowControl" instance=ExtResource("6_0nx1m")]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 62.0
text = "Back"

[connection signal="pressed" from="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/OptionsMargins/Control/OptionsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="FlowControlContainer/FlowControl/BackButton" to="." method="_on_back_button_pressed"]
